--- a/css/main.css
+++ b/css/main.css
@@ -538,26 +538,41 @@ legend {
 
 .card.gray-color {
   width: 570px;
+  position: relative;
+  -webkit-transition: .3s ease-in;
+  transition: .3s ease-in;
   background-color: #A6A6A6;
 }
 
 .card.sand-color {
   width: 570px;
+  position: relative;
+  -webkit-transition: .3s ease-in;
+  transition: .3s ease-in;
   background-color: #C1B19B;
 }
 
 .card.blue-color {
   width: 670px;
+  position: relative;
+  -webkit-transition: .3s ease-in;
+  transition: .3s ease-in;
   background-color: #66B0BE;
 }
 
 .card.brown-color {
   width: 670px;
+  position: relative;
+  -webkit-transition: .3s ease-in;
+  transition: .3s ease-in;
   background-color: #876F56;
 }
 
 .card.green-color {
   width: 470px;
+  position: relative;
+  -webkit-transition: .3s ease-in;
+  transition: .3s ease-in;
   background-color: #27695E;
 }
 
@@ -570,14 +585,14 @@ legend {
 }
 
 .cards-row a:hover {
-  position: relative;
-  bottom: 3px;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
   opacity: 0.8;
 }
 
 .cards-row a:active {
-  position: relative;
-  top: 6px;
+  -webkit-transform: translateY(5px);
+          transform: translateY(5px);
 }
 
 .contacts-title {
