--- a/sass/blocks/_card.scss
+++ b/sass/blocks/_card.scss
@@ -36,31 +36,36 @@
 
 .card.gray-color {
     width: 570px;
-
+    position: relative;
+    transition: .3s ease-in;
     background-color: #A6A6A6;
 }
 
 .card.sand-color {
     width: 570px;
-
+    position: relative;
+    transition: .3s ease-in;
     background-color: #C1B19B;
 }
 
 .card.blue-color {
     width: 670px;
-
+    position: relative;
+    transition: .3s ease-in;
     background-color: #66B0BE;
 }
 
 .card.brown-color {
     width: 670px;
-
+    position: relative;
+    transition: .3s ease-in;
     background-color: #876F56;
 }
 
 .card.green-color {
     width: 470px;
-
+    position: relative;
+    transition: .3s ease-in;
     background-color: #27695E;
 }
 
@@ -75,13 +80,11 @@
 }
 
 .cards-row a:hover {
-   position: relative;
-   bottom: 3px;
+   transform: translateY(-5px);
 
    opacity: 0.8;
 }
 
 .cards-row a:active {
-    position: relative;
-    top: 6px;
+   transform: translateY(5px);
  } 
