--- a/css/main.css
+++ b/css/main.css
@@ -297,22 +297,41 @@ legend {
   left: 0;
   background-color: rgba(38, 88, 71, 0.7);
   z-index: 2;
-  -webkit-transition: 0.5s ease-in;
-  transition: 0.5s ease-in;
+  opacity: 0;
 }
 .overlay--active {
   display: block;
+  -webkit-animation-name: opacity;
+          animation-name: opacity;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
-
+@-webkit-keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .mobile-menu {
-  display: none;
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
-  width: 320px;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
+  width: 320px;
   z-index: 2;
   padding-top: 100px;
   padding-left: 40px;
@@ -333,9 +352,8 @@ legend {
   font-size: 20px;
 }
 .mobile-menu--active {
-  display: block;
-  -webkit-transform: unset;
-          transform: unset;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .logo {
