--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -120,24 +120,38 @@
     bottom: 0;
     right: 0;
     left: 0;
+
     background-color: rgba(38, 88, 71, 0.7);
     z-index: 2;
 
-    transition: 0.5s ease-in;
+    opacity: 0;
 
     &--active{
         display: block;
+        animation-name: opacity;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
+    }
+
+    @keyframes opacity {
+        from{
+            opacity: 0;
+        }
+        to{
+            opacity: 1;
+        }
+        
     }
 }
 
 .mobile-menu{
-    display: none;
     position: fixed;
     top: 0;
     bottom: 0;
     right: 0;
-    width: 320px;
+
     transform: translateX(100%);
+    width: 320px;
 
     z-index: 2;
 
@@ -159,7 +173,9 @@
     }
 
     &--active{
-        display: block;
-        transform: unset;
+        transform: translateX(0);
     }
+
+    
+
 }
